apply MVC pattern

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,16 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
-            android:name=".ReviewActivity"
+            android:name=".view.ReviewActivity"
             android:exported="false" />
         <activity
-            android:name=".CheckOutActivity"
+            android:name=".view.CheckOutActivity"
             android:exported="false" />
         <activity
-            android:name=".DetailedInfoActivity"
+            android:name=".view.DetailedInfoActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
