--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
+            android:name=".view.ReviewAdapter"
+            android:exported="false" />
+        <activity
             android:name=".view.ToolbarBaseActivity"
             android:exported="false" />
         <activity
